# pyrpl

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  Untitled.ipynb  api.html  basics.html  changelog.html  contents.html  environment_pyrpl.yml  genindex.html  gui.html  index.html  installation.html  objects.inv  publications.html  py-modindex.html  pyproject.toml  pyrpl.spec  requirements.txt  run_pyrpl_in_notebook.ipynb  search.html  searchindex.js  setup.cfg  setup.py  summurize_import_time.py  thanks.html  user_feedback.html
.docker/test/: Dockerfile
.github/workflows/: ci.yml  ci_self_hosted.yml  docs.yml  manual-build.yml  python-app.yml
_downloads/103f93b2b89a339ceb1b116ef95970e6/: tutorial.html
_downloads/6550e43a23d4081451efdb6179471891/: timers.ipynb
_sources/: basics.rst.txt  installation.rst.txt  publications.rst.txt
_sources/developer_guide/: contributing.rst.txt  fpga_compilation.rst.txt
_sources/developer_guide/api/: acquisition_module.rst.txt  attribute_and_module.rst.txt  lockbox.rst.txt  memory_tree.rst.txt  spectrum.rst.txt
_sources/reference_guide/: index.rst.txt
_sources/user_guide/installation/: common_problems.rst.txt
_static/: documentation_options.js
developer_guide/: codingstyle.html  codingworkflow.html  contributing.html  fpga_compilation.html  index.html  sdcard.html  unittests.html
developer_guide/api/: acquisition_module.html  attribute_and_module.html  data_widget.html  index.html  lockbox.html  memory_tree.html  select_property.html  spectrum.html
developer_guide/api/asynchronous/: benchmark.html  index.html
docs/: make.bat  makefile
docs/example-notebooks/: asg-synchronization-example.ipynb  async_acquisition.ipynb  iq-accumulator-example.ipynb  pwm-example.ipynb  tutorial.ipynb
docs/old_files/: Untitled.ipynb  tutorial.ipynb
docs/source/: api.rst  basics.rst  changelog.rst  conf.py  contents.rst  gui.rst  index.rst  installation.rst  publications.rst  thanks.rst
docs/source/_templates/: layout.html
docs/source/developer_guide/: fpga_compilation.rst
gallery/: index.html
old_CI_config_files/: .deploy_to_sourceforge.py  Dockerfile
pyrpl/: __init__.py  __main__.py  _version.py  acquisition_module.py  async_utils.py  async_utils_old.py  attributes.py  curvedb.py  directories.py  errors.py  memory.py  module_attributes.py  modules.py  pyrpl.py  pyrpl_utils.py  redpitaya.py  redpitaya_client.py  sshshell.py
pyrpl/fpga/: Makefile  clean.bat  clockInfo.txt  make.bat  make_bin.bat  make_dtbo.bat  make_dtbo_with_vitis_python_api.bat  make_fsbl.bat  red_pitaya_vivado_project.tcl  settings.sh  tight_setup_hold_pins.txt  vitis_create_fsbl.py  xsct_hsi_dtb.tcl
pyrpl/fpga/ip/: system_bd.tcl
pyrpl/fpga/rtl/: red_pitaya_asg_ch.v  red_pitaya_dsp.v  red_pitaya_iir_block.v  red_pitaya_iq_block.v  red_pitaya_iq_fgen_block.v  red_pitaya_iq_modulator_block.v  red_pitaya_pfd_block.v  red_pitaya_pid_block.v  red_pitaya_product_sat.v
pyrpl/hardware_modules/: __init__.py  ams.py  asg.py  cordic.py  dsp.py  filter.py  hk.py  iq.py  pid.py  pwm.py  sampler.py  scope.py  trig.py
pyrpl/hardware_modules/iir/: __init__.py  iir.py  iir_theory.py
pyrpl/software_modules/: __init__.py  curve_viewer.py  loop.py  module_managers.py  network_analyzer.py  pyrpl_config.py  software_pid.py  spectrum_analyzer.py
pyrpl/software_modules/lockbox/: __init__.py  gainoptimizer.py  input.py  lockbox.py  output.py  stage.py
pyrpl/test/: conftest.py  debug_timer.py  test_attribute.py  test_base.py  test_example.py  test_load_save.py  test_lockbox.py  test_memory.py  test_module_widgets.py  test_na.py  test_ownership.py  test_proxyproperty.py  test_pyqtgraph_benchmark.py  test_redpitaya.py  test_registers.py  test_spectrum_analyzer.py  test_validate_and_normalize.py
pyrpl/test/test_hardware_modules/: old_nosetest_na_iir.py  test_dsp_inputs.py  test_na_iir_pytest.py  test_pid_na_iq.py  test_sampler.py  test_scope.py  test_scope_asg_ams.py  test_trig.py
pyrpl/test/test_ipython_notebook/: old_unittest_ipython_kernel.py  test_notebook.ipynb  test_notebook.py
pyrpl/test/test_widgets/: test_attribute_widgets.py  test_module_widgets.py  test_startup_widget.py  test_yml_editor.py
pyrpl/widgets/: attribute_widgets.py  pyrpl_widget.py  spinbox.py  startup_widget.py  yml_editor.py
pyrpl/widgets/module_widgets/: __init__.py  acquisition_module_widget.py  asg_widget.py  base_module_widget.py  curve_viewer_widget.py  hk_widget.py  iir_widget.py  iq_widget.py  lockbox_widget.py  module_manager_widget.py  na_widget.py  pid_widget.py  (+5 more)
reference_guide/: index.html
user_guide/: index.html
user_guide/basics/: index.html
user_guide/installation/: common_problems.html  hardware_installation.html  index.html  pyrpl_installation.html  user_dir.html
user_guide/tutorial/: index.html  tutorial.html
(+199 files in other folders)
