[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrpl"
dynamic = ["version"]   # <-- version comes from pyrpl/_version.py
description = "DSP servo controller for quantum optics with the RedPitaya"
readme = "README.md"
authors = [
  { name = "Leonhard Neuhaus", email = "neuhaus@lkb.upmc.fr" },
    { name = "Michaël Croquette", email = "michael.croquette@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["RedPitaya", "DSP", "FPGA", "IIR", "PDH", "servo", "quantum optics"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Physics"
]

dependencies = [
    "scp",
    "scipy",
    "pyyaml",
    "pandas",
    "pyqtgraph",
    "numpy>=1.9",
    "paramiko>=2.0",
    "PyQt5",
    "qtpy",
    "nbconvert",
    "jupyter-client",
    "qasync"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "sphinx", "sphinx_bootstrap_theme"]
test = ["pytest", "pytest-cov"]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
pyrpl = ["fpga/*", "monitor_server/*", "config/*", "widgets/images/*"]

[tool.setuptools.dynamic]
version = { attr = "pyrpl._version.__version__" }
